tests/snapshots/integration__integration_tests__list__with_branches_flag.snap
---
source: tests/integration_tests/list.rs
info:
  program: wt
  args:
    - list
    - "--branches"
  env:
    CLICOLOR_FORCE: "1"
    COLUMNS: "150"
    GIT_AUTHOR_DATE: "2025-01-01T00:00:00Z"
    GIT_COMMITTER_DATE: "2025-01-01T00:00:00Z"
    GIT_CONFIG_GLOBAL: /dev/null
    GIT_CONFIG_SYSTEM: /dev/null
    GIT_EDITOR: ""
    LANG: C
    LC_ALL: C
    SOURCE_DATE_EPOCH: "1761609600"
    WORKTRUNK_CONFIG_PATH: /var/folders/wf/s6ycxvvs4ln8qsdbfx40hnc40000gn/T/.tmp5NquCm/test-config.toml
---
success: true
exit_code: 0
----- stdout -----
[2mBranch                  [0m  [2mPath                   [0m  [2mAge          [0m  [2mCommit  [0m  [2mMessage                               [0m  
[1m[35mmain                    [0m  [1m[35m./test-repo            [0m  [2m10 months ago[0m  [2mb834638e[0m  [2mInitial commit[0m                        
[2mfeature-with-worktree   [0m  [2m./feature-with-worktree[0m  [2m10 months ago[0m  [2mb834638e[0m  [2mInitial commit[0m                        
[2manother-branch          [0m                           [2m10 months ago[0m  [2mb834638e[0m  [2mInitial commit[0m                        
[2mfeature-without-worktree[0m                           [2m10 months ago[0m  [2mb834638e[0m  [2mInitial commit[0m                        
[2mfix-bug                 [0m                           [2m10 months ago[0m  [2mb834638e[0m  [2mInitial commit[0m                        

[2mShowing 2 worktrees, 3 branches[0m

----- stderr -----
